# PromptEngineeringStudio

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Test.ipynb  google_genai_test.ipynb  graphviz_testing.ipynb  llm.ipynb
project_pages/: NR_edit_prompt.py  NR_show_prompt_versions.py  create_new_project.py  create_new_prompt_from_current.py  create_new_prompt_from_project.py  create_new_prompt_from_scratch.py  create_new_prompt_version.py  edit_current_prompt_version.py  playground.py  project_level_prompt_lineage.py  projects.py  prompt_version_testing.py  show_project.py  show_prompt_versions.py  update_project.py
utils/: OLD_helper.py  codeEditorButtons.json  codeEditorInfoBar.json  codeEditorOptions.json  config.json  helper.py  llm_helper.py  sql_helper.py
