[tool.poetry]
name = "promptengineeringstudio"
version = "0.0.1"
description = ""
authors = ["HrushikeshPawar <hrushikesh.vpawar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.4.0"
streamlit = "^1.31.1"
python-dotenv = "^1.0.1"
google-cloud-aiplatform = "^1.43.0"
streamlit-code-editor = "^0.1.12"
streamlit-extras = "^0.4.0"
st-pages = "^0.4.5"
streamlit-option-menu = "^0.3.12"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
